# slack-emoji-leaderboard

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/src/: app.py  config.py
backend/src/models/: __init__.py  base_model.py  slack_emoji_alias.py  slack_message.py
frontend/: .gitignore  .prettierrc  Dockerfile  example.env  package.json  svelte.config.js  tailwind.config.cjs
frontend/src/lib/components/: Leaderboard.svelte  LeaderboardItem.svelte
frontend/src/lib/services/: emojis.js
frontend/src/routes/: +layout.svelte  +page.js  +page.svelte
migrations/models/: 0_20221203231918_init.py  0_20221204110424_init.py  1_20221204110537_update.py  2_20221209123316_update.py
src/: app.py  config.py
src/docs/: route_models.py
src/models/: __init__.py  slack_emoji.py  slack_message.py  slack_message_emoij_use.py  slack_message_emoji_reaction.py  slack_user_emoji_reactions.py
src/utils/: slack.py
sync/: Dockerfile  example.env  pyproject.toml
sync/src/: bot.py  config.py
